fixed payment donation summary, bulk edit issues